# UPDATED_ICF_BUTTON

./: .env.example  .gitignore  ad_verification.py  admin_auth.py  admin_config_verification.py  admin_error_handler.py  admin_integration_test.py  admin_middleware.py  admin_panel.py  app.py  company_verification.py  config.py  config_manager.py  main.py  maintenance_mode.py  models.py  monitoring_service.py  news_verification.py  ocr_processor.py  prompt_manager.py  pyproject.toml  rate_limiter.py  readme.md  redis_check.py  requirements.txt  safebrowsing.py  vercel.json
api/: index.py
static/css/: styles.css
static/js/: script.js
templates/: ads.html  ads_history.html  company.html  company_history.html  history.html  index.html  layout.html  maintenance.html  news.html  news_history.html
templates/admin/: base.html  dashboard.html  fine_tuning.html  login.html  maintenance.html  monitoring.html  rate_limits.html  settings.html
